<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/botWeek"
        android:icon="@android:drawable/arrow_down_float"
        app:showAsAction="always"
        android:title="@string/menuButtonChangeWeek"/>
    <item
        android:id="@+id/upWeek"
        android:icon="@android:drawable/arrow_up_float"
        app:showAsAction="always"
        android:title="@string/menuButtonChangeWeek"/>
    <group>
        <item
            android:id="@+id/updateSchedule"
            android:title="@string/menuUpdateSchedule" />
        <item
            android:id="@+id/mainSchedule"
            android:title="@string/menuMain"/>
        <item
            android:id="@+id/examsSchedule"
            android:title="@string/menuExams" />
        <item
            android:id="@+id/changeSchedule"
            android:title="@string/menuChangeSchedule"/>
        <item
            android:id="@+id/options"
            android:title="@string/menuOptions"/>
    </group>
</menu>

